-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.842 2011-01-05 04:37:06 guru Exp $
-----------------------------------------------------------------------------------------

2011-01-04	pwessel
	* gmt_support.c:	GMT_cspline should initialize c[0] = c[n-1] = 0.0 in case
				it is called repeatedly [not the case in GMT].

2011-01-03	pwessel
	* autoconf.ac:		Moving to use GSHHS 2.1.1 for next release.
	* gmt_shore.c:		---"---

2010-12-31	pwessel
	* x2sys_init.c:		Crashed if -D was not given [should imply -DTAG].

2010-12-29	pwessel
	* psscale.c:		Now patterns have constant orientation regardless of using
				horizontal or vertical bar.

2010-12-20	remko
	* utilmeca.c:		Patch to fix incorrect plotting of moment tensors with big
				isotropic components. Thanks to Jeremy Pesicek.

2010-12-17	pwessel
	* grdfilter.c:		Allow -D2 and -D3 to handle periodic and polar boundary conditions.
	
2010-12-15	pwessel
	* gmt_support.c:	When calculating how far to place an annotation from the tick mark
				we must check if a fancy frame width exceeds the tick length.
2010-12-13	pwessel
	* splitxyz.c:		Did not list -Q in synopsis.
	* surface.c:		Bug if using seconds (c) in search radius (got minutes).
	* *.txt:		Fixed typos in several man pages.

2010-12-13	jluis
	* ps2raster.c		For some reason -W was not forcing -A. Now it does it again  

2010-12-11	pwessel
	* pslegend.c:		One more place to use original -R -J (see 2010-11-18 fix).
	* gmt_map.c:		For van Grinten: errors in left/right_circle
	* gmt_plot.c:		A colored TICK_PEN would also color annotations.

2010-12-05	pwessel
	* spotter/grdrotater.c:	Did not handle the rotation of an entire global grid since
				the polygon outline interfered with the domain.

2010-12-02	pwessel
	* x2sys/x2sys.c:	Minor bug in x2sys binary reading of floats.

2010-11-30	pwessel
	* xyz2grd.c:		Do not tolerate NaNs in x,y and give error (e.g., if junk is given).

2010-11-23	pwessel